# haus

./: .gitignore  Cargo.toml  README.md  Trunk.toml  devshell.toml  flake.nix  haus-136d075e750f94ef.js  haus-136d075e750f94ef_bg.wasm  haus-4e9c1bc06b7085c8.js  haus-4e9c1bc06b7085c8_bg.wasm  haus-aabcc8ac1f7f28b2.js  haus-aabcc8ac1f7f28b2_bg.wasm  index.html  package.json  styles-1e619427f692ff5b.css  treefmt.toml
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs
src/components/: auth.rs
src/routes/: about.rs  home.rs  mod.rs
static/: index.html  index.ts  styles.scss
tests/: lib.rs
