[package]
name = "haus"
version = "0.1.0"
categories = ["wasm"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
wasm-bindgen = "=0.2.80"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"

[dev-dependencies]
gloo-utils = "0.1.0"
wasm-bindgen-test = "0.3.14"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
