[package]
name = "haus"
version = "0.1.0"
categories = ["wasm"]
edition = "2021"
license = "MIT"
readme = "./README.md"

[lib]
name = "haus_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
wasm-bindgen = "=0.2.80"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-oauth2 = "0.3"
yew-router = "0.16.0"

[dev-dependencies]
gloo-utils = "0.1.0"
wasm-bindgen-test = "0.3.14"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
